--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-1.31MB/s(Youtube:不良林), server: 5.183.176.84, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-1.40MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇬🇧 英国-2.23MB/s(Youtube:不良林), server: 51.195.136.209, port: 50004, type: ss, cipher: aes-256-cfb, password: !<str> 4415934295}
-  - {name: 🇬🇧 英国-1.21MB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇯🇵 日本-247.4KB/s(Youtube:不良林), server: 5.183.176.80, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-2.04MB/s(Youtube:不良林), server: 5.183.176.81, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-3.47MB/s(Youtube:不良林), server: 85.208.108.93, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇸🇬 新加坡-3.02MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-1000.3KB/s(Youtube:不良林), server: 196.247.59.154, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-1.75MB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-3.31MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-1.25MB/s(Youtube:不良林), server: 196.247.59.154, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇷🇺 俄罗斯联邦-2.45MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
   - {name: 🇬🇧 英国-9.26MB/s(Youtube:不良林), server: 144.24.88.101, port: 16833, type: vmess, uuid: f5425ccf-3946-4fb4-eb24-5393d78a392f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 捷克-354.2KB/s(Youtube:不良林), server: 195.133.53.192, port: 43688, type: vmess, uuid: bd1c8b57-0a9e-4e9f-a261-48e90c871e41, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 195.133.53.192}}
+  - {name: 🇦🇺 澳大利亚-2.01MB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.31MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.40MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.23MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.21MB/s(Youtube:不良林)
-      - 🇯🇵 日本-247.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.47MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1000.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.31MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.25MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.45MB/s(Youtube:不良林)
       - 🇬🇧 英国-9.26MB/s(Youtube:不良林)
+      - 捷克-354.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.01MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-1.31MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.40MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.23MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.21MB/s(Youtube:不良林)
-      - 🇯🇵 日本-247.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.47MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1000.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.31MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.25MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.45MB/s(Youtube:不良林)
       - 🇬🇧 英国-9.26MB/s(Youtube:不良林)
+      - 捷克-354.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.01MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.31MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.40MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.23MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.21MB/s(Youtube:不良林)
-      - 🇯🇵 日本-247.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.47MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1000.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.31MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.25MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.45MB/s(Youtube:不良林)
       - 🇬🇧 英国-9.26MB/s(Youtube:不良林)
+      - 捷克-354.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.01MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-1.31MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.40MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.23MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.21MB/s(Youtube:不良林)
-      - 🇯🇵 日本-247.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.47MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1000.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.31MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.25MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.45MB/s(Youtube:不良林)
       - 🇬🇧 英国-9.26MB/s(Youtube:不良林)
+      - 捷克-354.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.01MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.31MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.40MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.23MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.21MB/s(Youtube:不良林)
-      - 🇯🇵 日本-247.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.47MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1000.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.31MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.25MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.45MB/s(Youtube:不良林)
       - 🇬🇧 英国-9.26MB/s(Youtube:不良林)
+      - 捷克-354.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.01MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-1.31MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.40MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.23MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.21MB/s(Youtube:不良林)
-      - 🇯🇵 日本-247.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.47MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1000.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.31MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.25MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.45MB/s(Youtube:不良林)
       - 🇬🇧 英国-9.26MB/s(Youtube:不良林)
+      - 捷克-354.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.01MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-1.31MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.40MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.23MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.21MB/s(Youtube:不良林)
-      - 🇯🇵 日本-247.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.47MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1000.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.31MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.25MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.45MB/s(Youtube:不良林)
       - 🇬🇧 英国-9.26MB/s(Youtube:不良林)
+      - 捷克-354.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.01MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
