--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
+  - {name: 🇨🇦 加拿大-1.55MB/s(Youtube:不良林), server: 196.247.59.154, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-708.7KB/s(Youtube:不良林), server: 5.183.176.81, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇬🇧 英国-1.53MB/s(Youtube:不良林), server: 51.89.18.25, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/350432191028, ws-headers: {Host: 51.89.18.25}}
   - {name: 🇯🇵 日本-2.23MB/s(Youtube:不良林), server: 89.31.126.147, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-1.66MB/s(Youtube:不良林), server: 89.31.126.147, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-4.90MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-1.52MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇨🇦 加拿大-1.87MB/s(Youtube:不良林), server: 196.247.59.154, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-571.4KB/s(Youtube:不良林), server: 185.172.113.101, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇯🇵 日本-474.3KB/s(Youtube:不良林), server: 5.183.176.91, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇯🇵 日本-600.2KB/s(Youtube:不良林), server: 5.183.176.92, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇯🇵 日本-837.8KB/s(Youtube:不良林), server: 5.183.176.94, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇨🇦 加拿大-1.55MB/s(Youtube:不良林)
+      - 🇯🇵 日本-708.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.53MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.23MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.90MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.52MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
+      - 🇯🇵 日本-571.4KB/s(Youtube:不良林)
       - 🇯🇵 日本-474.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-600.2KB/s(Youtube:不良林)
       - 🇯🇵 日本-837.8KB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 🇨🇦 加拿大-1.55MB/s(Youtube:不良林)
+      - 🇯🇵 日本-708.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.53MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.23MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.90MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.52MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
+      - 🇯🇵 日本-571.4KB/s(Youtube:不良林)
       - 🇯🇵 日本-474.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-600.2KB/s(Youtube:不良林)
       - 🇯🇵 日本-837.8KB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇨🇦 加拿大-1.55MB/s(Youtube:不良林)
+      - 🇯🇵 日本-708.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.53MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.23MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.90MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.52MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
+      - 🇯🇵 日本-571.4KB/s(Youtube:不良林)
       - 🇯🇵 日本-474.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-600.2KB/s(Youtube:不良林)
       - 🇯🇵 日本-837.8KB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 🇨🇦 加拿大-1.55MB/s(Youtube:不良林)
+      - 🇯🇵 日本-708.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.53MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.23MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.90MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.52MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
+      - 🇯🇵 日本-571.4KB/s(Youtube:不良林)
       - 🇯🇵 日本-474.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-600.2KB/s(Youtube:不良林)
       - 🇯🇵 日本-837.8KB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 🇨🇦 加拿大-1.55MB/s(Youtube:不良林)
+      - 🇯🇵 日本-708.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.53MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.23MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.90MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.52MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
+      - 🇯🇵 日本-571.4KB/s(Youtube:不良林)
       - 🇯🇵 日本-474.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-600.2KB/s(Youtube:不良林)
       - 🇯🇵 日本-837.8KB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇨🇦 加拿大-1.55MB/s(Youtube:不良林)
+      - 🇯🇵 日本-708.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.53MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.23MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.90MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.52MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
+      - 🇯🇵 日本-571.4KB/s(Youtube:不良林)
       - 🇯🇵 日本-474.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-600.2KB/s(Youtube:不良林)
       - 🇯🇵 日本-837.8KB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇨🇦 加拿大-1.55MB/s(Youtube:不良林)
+      - 🇯🇵 日本-708.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.53MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.23MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.90MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.52MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
+      - 🇯🇵 日本-571.4KB/s(Youtube:不良林)
       - 🇯🇵 日本-474.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-600.2KB/s(Youtube:不良林)
       - 🇯🇵 日本-837.8KB/s(Youtube:不良林)
