--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-2.60MB/s(Youtube:不良林), server: 85.208.108.93, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇯🇵 日本-688.5KB/s(Youtube:不良林), server: 5.183.176.83, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-349.6KB/s(Youtube:不良林), server: 185.172.113.101, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-708.7KB/s(Youtube:不良林), server: 5.183.176.81, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-2.95MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-9.17MB/s(Youtube:不良林), server: 116.63.103.11, port: 45184, type: vmess, uuid: 20b48507-b52b-49bc-93b4-90ef114532fa, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 116.63.103.11}}
-  - {name: 🇺🇸 美国-1.61MB/s(Youtube:不良林), server: www.nubility.ml, port: 443, type: trojan, password: 9a2c5cc6ef, sni: www.nubility.ml, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-836.2KB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
   - {name: 🇺🇸 美国-1.58MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.14MB/s(Youtube:不良林), server: 169.197.141.5, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇯🇵 日本-1022.2KB/s(Youtube:不良林), server: 5.183.176.83, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-790.5KB/s(Youtube:不良林), server: 5.183.176.94, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-179.6KB/s(Youtube:不良林), server: 185.172.113.102, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇬🇧 英国-1.30MB/s(Youtube:不良林), server: 51.195.136.209, port: 50004, type: ss, cipher: aes-256-cfb, password: !<str> 4415934295}
+  - {name: 🇯🇵 日本-1.94MB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-1.77MB/s(Youtube:不良林), server: v001.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /a11-dCeBnloadPy, ws-headers: {Host: v001.v2dns.bar}}
+  - {name: 🇬🇧 英国-438.6KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-1.26MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-2.60MB/s(Youtube:不良林)
-      - 🇯🇵 日本-688.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-349.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-708.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
-      - 🇫🇷 法国-836.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1022.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-790.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-179.6KB/s(Youtube:不良林)
       - 🇬🇧 英国-1.30MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.94MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.77MB/s(Youtube:不良林)
+      - 🇬🇧 英国-438.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-2.60MB/s(Youtube:不良林)
-      - 🇯🇵 日本-688.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-349.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-708.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
-      - 🇫🇷 法国-836.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1022.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-790.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-179.6KB/s(Youtube:不良林)
       - 🇬🇧 英国-1.30MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.94MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.77MB/s(Youtube:不良林)
+      - 🇬🇧 英国-438.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-2.60MB/s(Youtube:不良林)
-      - 🇯🇵 日本-688.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-349.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-708.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
-      - 🇫🇷 法国-836.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1022.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-790.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-179.6KB/s(Youtube:不良林)
       - 🇬🇧 英国-1.30MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.94MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.77MB/s(Youtube:不良林)
+      - 🇬🇧 英国-438.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-2.60MB/s(Youtube:不良林)
-      - 🇯🇵 日本-688.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-349.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-708.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
-      - 🇫🇷 法国-836.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1022.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-790.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-179.6KB/s(Youtube:不良林)
       - 🇬🇧 英国-1.30MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.94MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.77MB/s(Youtube:不良林)
+      - 🇬🇧 英国-438.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-2.60MB/s(Youtube:不良林)
-      - 🇯🇵 日本-688.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-349.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-708.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
-      - 🇫🇷 法国-836.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1022.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-790.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-179.6KB/s(Youtube:不良林)
       - 🇬🇧 英国-1.30MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.94MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.77MB/s(Youtube:不良林)
+      - 🇬🇧 英国-438.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-2.60MB/s(Youtube:不良林)
-      - 🇯🇵 日本-688.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-349.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-708.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
-      - 🇫🇷 法国-836.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1022.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-790.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-179.6KB/s(Youtube:不良林)
       - 🇬🇧 英国-1.30MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.94MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.77MB/s(Youtube:不良林)
+      - 🇬🇧 英国-438.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-2.60MB/s(Youtube:不良林)
-      - 🇯🇵 日本-688.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-349.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-708.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
-      - 🇫🇷 法国-836.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1022.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-790.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-179.6KB/s(Youtube:不良林)
       - 🇬🇧 英国-1.30MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.94MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.77MB/s(Youtube:不良林)
+      - 🇬🇧 英国-438.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
