--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-328.9KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-1.63MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇨🇳 中国-326.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-1.69MB/s(Youtube:不良林), server: 85.208.108.93, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇯🇵 日本-3.37MB/s(Youtube:不良林), server: 85.208.108.93, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇯🇵 日本-724.9KB/s(Youtube:不良林), server: 5.183.176.93, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-404.2KB/s(Youtube:不良林), server: 5.183.176.84, port: 804, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-379.5KB/s(Youtube:不良林), server: 5.183.176.83, port: 804, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-1.25MB/s(Youtube:不良林), server: 5.183.176.92, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-1.06MB/s(Youtube:不良林), server: 5.183.176.94, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇸🇬 新加坡-1.02MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-790.5KB/s(Youtube:不良林), server: 5.183.176.94, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-3.56MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-181.7KB/s(Youtube:不良林), server: 185.172.113.102, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇷🇺 俄罗斯联邦-1.77MB/s(Youtube:不良林), server: v001.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /a11-dCeBnloadPy, ws-headers: {Host: v001.v2dns.bar}}
+  - {name: 🇦🇺 澳大利亚-1.24MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
+  - {name: 🇯🇵 日本-479.1KB/s(Youtube:不良林), server: 5.183.176.80, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-440.0KB/s(Youtube:不良林), server: 5.183.176.94, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-503.6KB/s(Youtube:不良林), server: 5.183.176.80, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇬🇧 英国-1.60MB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-328.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-326.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.69MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.37MB/s(Youtube:不良林)
-      - 🇯🇵 日本-724.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-404.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-379.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.25MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.06MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-790.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.56MB/s(Youtube:不良林)
+      - 🇯🇵 日本-181.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.77MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-479.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-440.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-503.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.60MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-328.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-326.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.69MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.37MB/s(Youtube:不良林)
-      - 🇯🇵 日本-724.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-404.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-379.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.25MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.06MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-790.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.56MB/s(Youtube:不良林)
+      - 🇯🇵 日本-181.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.77MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-479.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-440.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-503.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.60MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-328.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-326.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.69MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.37MB/s(Youtube:不良林)
-      - 🇯🇵 日本-724.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-404.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-379.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.25MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.06MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-790.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.56MB/s(Youtube:不良林)
+      - 🇯🇵 日本-181.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.77MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-479.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-440.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-503.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.60MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-328.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-326.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.69MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.37MB/s(Youtube:不良林)
-      - 🇯🇵 日本-724.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-404.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-379.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.25MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.06MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-790.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.56MB/s(Youtube:不良林)
+      - 🇯🇵 日本-181.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.77MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-479.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-440.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-503.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.60MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-328.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-326.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.69MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.37MB/s(Youtube:不良林)
-      - 🇯🇵 日本-724.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-404.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-379.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.25MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.06MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-790.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.56MB/s(Youtube:不良林)
+      - 🇯🇵 日本-181.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.77MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-479.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-440.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-503.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.60MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-328.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-326.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.69MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.37MB/s(Youtube:不良林)
-      - 🇯🇵 日本-724.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-404.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-379.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.25MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.06MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-790.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.56MB/s(Youtube:不良林)
+      - 🇯🇵 日本-181.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.77MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-479.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-440.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-503.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.60MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-328.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-326.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.69MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.37MB/s(Youtube:不良林)
-      - 🇯🇵 日本-724.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-404.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-379.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.25MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.06MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-790.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.56MB/s(Youtube:不良林)
+      - 🇯🇵 日本-181.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.77MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-479.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-440.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-503.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.60MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
